changes for portfolio

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -508,7 +508,7 @@ section {
 }
 
 .about .image {
-  background: url("../img/me.jpg") center center no-repeat;
+  background: url("../img/my.jpg") center center no-repeat;
   background-size: cover;
   min-height: 400px;
 }
